Clean up some code and add a tooltip

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -16,6 +16,7 @@
 
 form.doormacro > nav.sheet-tabs.tabs {
   text-align: center;
+  gap: 5px;
 }
 
 form.doormacro > nav.sheet-tabs.tabs > .active {
