--- a/templates/doormacro.hbs
+++ b/templates/doormacro.hbs
@@ -1,25 +1,25 @@
 <form class="editable flexcol doormacro" autocomplete="off">
+
+  <!-- Header -->
   <header class="sheet-header">
-    <h1>
-      <input name="name" type="text" value="{{name}}" disabled>
-    </h1>
+    <h1><input name="name" type="text" value="{{name}}" disabled></h1>
   </header>
 
-  <!-- navigation -->
+  <!-- Navigation -->
   <nav class="sheet-tabs tabs" aria-role="Form Tab Navigation">
     {{#each triggers as |trigger|}}
     <a class="trigger" data-tab="{{trigger.type}}">{{trigger.label}}</a>
     {{/each}}
   </nav>
 
-  <!-- tabs -->
+  <!-- Tabs -->
   <div class="content-tabs">
     {{#each triggers as |trigger|}}
     <div class="tab" data-tab="{{trigger.type}}">
       <div class="form-group stacked command" data-type="{{trigger.type}}">
         <div class="command-line">
           <label>{{localize "Command"}}</label>
-          <div class="as-gm">
+          <div class="as-gm" data-tooltip="DOORMACRO.AsGMTooltip">
             <label>{{localize "DOORMACRO.AS_GM"}}</label>
             <input type="checkbox" name="flags.doormacro.asGM.{{trigger.type}}" {{checked trigger.asGM}}>
           </div>
@@ -30,9 +30,9 @@
     {{/each}}
   </div>
 
+  <!-- Footer -->
   <footer class="sheet-footer flexrow">
-    <button type="submit">
-      <i class="fa-solid fa-save"></i> {{localize "Save"}}
-    </button>
+    <button type="submit"><i class="fa-solid fa-save"></i> {{localize "Save"}}</button>
   </footer>
+
 </form>
