--- a/templates/doormacro.hbs
+++ b/templates/doormacro.hbs
@@ -2,29 +2,29 @@
 
   <!-- Header -->
   <header class="sheet-header">
-    <h1><input name="name" type="text" value="{{name}}" disabled></h1>
+    <h1>{{name}}</h1>
   </header>
 
   <!-- Navigation -->
   <nav class="sheet-tabs tabs" aria-role="Form Tab Navigation">
-    {{#each triggers as |trigger|}}
-    <a class="trigger" data-tab="{{trigger.type}}">{{trigger.label}}</a>
+    {{#each triggers}}
+    <a class="trigger" data-tab="{{type}}">{{label}}</a>
     {{/each}}
   </nav>
 
   <!-- Tabs -->
   <div class="content-tabs">
-    {{#each triggers as |trigger|}}
-    <div class="tab" data-tab="{{trigger.type}}">
-      <div class="form-group stacked command" data-type="{{trigger.type}}">
+    {{#each triggers}}
+    <div class="tab" data-tab="{{type}}">
+      <div class="form-group stacked command" data-type="{{type}}">
         <div class="command-line">
           <label>{{localize "Command"}}</label>
           <div class="as-gm" data-tooltip="DOORMACRO.AsGMTooltip">
             <label>{{localize "DOORMACRO.AS_GM"}}</label>
-            <input type="checkbox" name="flags.doormacro.asGM.{{trigger.type}}" {{checked trigger.asGM}}>
+            <input type="checkbox" name="flags.doormacro.{{type}}.asGM" {{checked asGM}}>
           </div>
         </div>
-        <textarea name="flags.doormacro.commands.{{trigger.type}}">{{trigger.command}}</textarea>
+        <textarea name="flags.doormacro.{{type}}.command">{{command}}</textarea>
       </div>
     </div>
     {{/each}}
